# software

./: .gitignore  README.md
apps/qt_gspeech_app/: CMakeLists.txt  README.md  package.xml
apps/qt_gspeech_app/config/: qt_gspeech_app.yaml
apps/qt_gspeech_app/examples/: test_english.py  test_german.py
apps/qt_gspeech_app/launch/: qt_gspeech_app.launch
apps/qt_gspeech_app/src/: qt_gspeech_app_node.py
apps/qt_nuitrack_app/: CMakeLists.txt  package.xml
apps/qt_nuitrack_app/launch/: qt_nuitrack_app.launch
apps/qt_nuitrack_app/msg/: FaceInfo.msg  GestureInfo.msg  Gestures.msg  Hands.msg  JointInfo.msg  LandmarkInfo.msg  Skeletons.msg
apps/qt_nuitrack_app/src/: main.cpp  qt_nuitrack_app.cpp
apps/qt_respeaker_app/: CMakeLists.txt  README.md  package.xml  requirements.txt
apps/qt_respeaker_app/autostart/: start_qt_respeaker_app.sh
apps/qt_respeaker_app/config/: qt_respeaker_app.yaml
apps/qt_respeaker_app/examples/: audio_record.py
apps/qt_respeaker_app/launch/: qt_respeaker_app.launch
apps/qt_respeaker_app/src/: qt_respeaker_app_node.py  tuning.py
apps/qt_respeaker_app/srv/: tuning_set.srv
apps/qt_riva_asr_app/: CMakeLists.txt  README.md  package.xml
apps/qt_riva_asr_app/autostart/: start_qt_riva_asr_app.sh
apps/qt_riva_asr_app/config/: qt_riva_asr_app.yaml
apps/qt_riva_asr_app/launch/: qt_riva_asr_app.launch
apps/qt_riva_asr_app/src/: qt_riva_asr_app_node.py
apps/qt_ros_vosk_app/: CMakeLists.txt  package.xml
apps/qt_ros_vosk_app/config/: qt_ros_vosk_app.yaml
apps/qt_ros_vosk_app/data/: hey_qt.ppn
apps/qt_ros_vosk_app/launch/: qt_ros_vosk_app.launch
apps/qt_ros_vosk_app/src/: porcupine_hotword.py  qt_ros_vosk_app_node.py
apps/qt_vosk_app/: CMakeLists.txt  README.md  package.xml
apps/qt_vosk_app/autostart/: start_qt_vosk_app.sh
apps/qt_vosk_app/config/: qt_vosk_app.yaml
apps/qt_vosk_app/data/: qt_robot.ppn
apps/qt_vosk_app/examples/: test_english.py  test_german.py
apps/qt_vosk_app/launch/: qt_vosk_app.launch
apps/qt_vosk_app/src/: qt_vosk_app_node.py
headers/: README.md
headers/include/qt_gesture_controller/: gesture_list.h  gesture_listRequest.h  gesture_listResponse.h  gesture_play.h  gesture_playRequest.h  gesture_playResponse.h  gesture_record.h  gesture_recordRequest.h  gesture_recordResponse.h  gesture_save.h  gesture_saveRequest.h  gesture_saveResponse.h  gesture_stop.h  gesture_stopRequest.h  gesture_stopResponse.h  qt_gesture_controller.h
headers/include/qt_motors_controller/: MotorState.h  home.h  homeRequest.h  homeResponse.h  qt_motors_controller.h  set_control_mode.h  set_control_modeRequest.h  set_control_modeResponse.h  set_velocity.h  set_velocityRequest.h  set_velocityResponse.h
headers/include/qt_robot_interface/: audio_play.h  audio_playRequest.h  audio_playResponse.h  audio_stop.h  audio_stopRequest.h  audio_stopResponse.h  behavior_talk_audio.h  behavior_talk_audioRequest.h  behavior_talk_audioResponse.h  behavior_talk_text.h  behavior_talk_textRequest.h  behavior_talk_textResponse.h  emotion_show.h  emotion_showRequest.h  emotion_showResponse.h  emotion_stop.h  emotion_stopRequest.h  emotion_stopResponse.h  setting_setVolume.h  setting_setVolumeRequest.h  setting_setVolumeResponse.h  speech_config.h  speech_configRequest.h  speech_configResponse.h  speech_say.h  speech_sayRequest.h  speech_sayResponse.h  speech_stop.h  speech_stopRequest.h  speech_stopResponse.h
headers/lib/pkgconfig/: qt_gesture_controller.pc  qt_motors_controller.pc  qt_robot_interface.pc
headers/qt_gesture_controller/: CMakeLists.txt  package.xml
headers/qt_gesture_controller/srv/: gesture_list.srv
headers/qt_motors_controller/: CMakeLists.txt  package.xml
headers/qt_motors_controller/srv/: home.srv  set_velocity.srv
headers/qt_nuitrack_app/: CMakeLists.txt
headers/qt_nuitrack_app/msg/: Faces.msg  HandInfo.msg
headers/qt_respeaker_app/: CMakeLists.txt  package.xml
headers/qt_respeaker_app/srv/: tuning_get.srv
headers/qt_robot_interface/: CMakeLists.txt  package.xml
headers/qt_robot_interface/srv/: audio_play.srv  emotion_look.srv  setting_download.srv  setting_info.srv  setting_setVolume.srv  setting_upload.srv  speech_config.srv
headers/qt_vosk_app/: CMakeLists.txt
headers/share/qt_gesture_controller/: package.xml
headers/share/qt_gesture_controller/cmake/: qt_gesture_controller-msg-extras.cmake  qt_gesture_controller-msg-paths.cmake  qt_gesture_controllerConfig.cmake
headers/share/qt_gesture_controller/srv/: gesture_play.srv  gesture_record.srv  gesture_save.srv
headers/share/qt_motors_controller/: package.xml
headers/share/qt_motors_controller/cmake/: qt_motors_controller-msg-extras.cmake  qt_motors_controller-msg-paths.cmake  qt_motors_controllerConfig.cmake
headers/share/qt_motors_controller/msg/: MotorState.msg
headers/share/qt_motors_controller/srv/: set_control_mode.srv
headers/share/qt_robot_interface/: package.xml
models/: qtrobot.dae  qtrobot.srdf  qtrobot.urdf
plugins/qtrobot_ikfast_left_arm_plugin/: package.xml
plugins/qtrobot_ikfast_left_arm_plugin/src/: qtrobot_left_arm_ikfast_solver.cpp
plugins/qtrobot_ikfast_right_arm_plugin/: CMakeLists.txt  package.xml  qtrobot_right_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
plugins/qtrobot_ikfast_right_arm_plugin/src/: qtrobot_right_arm_ikfast_moveit_plugin.cpp  qtrobot_right_arm_ikfast_solver.cpp
qt_nuitrack_app/: CMakeLists.txt
qt_nuitrack_app/msg/: FaceInfo.msg  SkeletonInfo.msg
qt_nuitrack_app/src/: qt_nuitrack_app.cpp
qt_vosk_app/: CMakeLists.txt  README.md
qt_vosk_app/autostart/: start_qt_vosk_app.sh  start_qt_vosk_interface.sh
qt_vosk_app/src/: qt_vosk_app_node.py
qtrobot_ikfast_left_arm_plugin/: CMakeLists.txt  qtrobot_left_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
qtrobot_ikfast_left_arm_plugin/src/: qtrobot_left_arm_ikfast_moveit_plugin.cpp
sdk/jscript/: README.md  qtrobot-1.0.min.js
sdk/jscript/src/: qtrobot-1.0.js
tools/qt_gesture_tool/: README.md  qt_gesture.py
tools/respeaker_mic_tunning/: README.md  requirements.txt  tuning_gui.py
(+123 files in other folders)
