<package format="2">
  <name>qt_gesture_controller</name>
  <version>1.1.4</version>
  <description>qt_gesture_controller</description>

  <maintainer email="ali.paikan@luxai.com">Ali Paikan</maintainer>

  <license>LUXAI S.A</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Ali Paikan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>controller_interface</build_depend>
  <exec_depend>controller_interface</exec_depend>

  <!--DEB_START-->
  <build_depend>qt_motor</build_depend>
  <exec_depend>qt_motor</exec_depend>
  <!--DEB_END-->
  
  <export>
    <controller_interface plugin="${prefix}/qt_gesture_controller_plugin.xml"/>
  </export>
</package>
